--- a/v2/bash/azuredevops/cloud-deployment.yml
+++ b/v2/bash/azuredevops/cloud-deployment.yml
@@ -1,6 +1,13 @@
 parameters:
   - name: artifactId
     type: string
+    required: true
+  - name: noBuildAndRestore
+    type: boolean
+    default: $False
+  - name: skipVersionCheck
+    type: boolean
+    default: $False
 
 jobs:
   - job: StartDeployment
@@ -12,6 +19,8 @@ jobs:
         name: requestStartDeployment
         env:
           artifactId: ${{ parameters.artifactId }}
+          noBuildAndRestore: ${{ parameters.noBuildAndRestore }}
+          skipVersionCheck: ${{ parameters.skipVersionCheck }}
         inputs:
           targetType: 'filePath'
           filePath: devops/scripts/start_deployment.sh
@@ -21,8 +30,8 @@ jobs:
             $artifactId
             $(TargetEnvironmentAlias)
             "Run for $(Build.BuildNumber)"
-            "true"
-            "false"
+            $(noBuildAndRestore)
+            $(skipVersionCheck)
             $(pipelineVendor)
 
   - job: CheckDeploymentProgress
