--- a/v2/bash/azuredevops/azure-release-pipeline.yaml
+++ b/v2/bash/azuredevops/azure-release-pipeline.yaml
@@ -53,5 +53,5 @@ stages:
       - template: cloud-deployment.yml
         parameters:
           artifactId: $(artifactId)
-          noBuildAndRestore: $False
-          skipVersionCheck: $False
+          noBuildAndRestore: 'false'
+          skipVersionCheck: 'false'
