--- a/v2/bash/azuredevops/cloud-deployment.yml
+++ b/v2/bash/azuredevops/cloud-deployment.yml
@@ -7,7 +7,10 @@ parameters:
   - name: skipVersionCheck
     type: string
     default: 'false'
-
+  - name: targetEnvironmentAlias
+    type: string
+    default: $(targetEnvironmentAlias)
+    
 jobs:
   - job: StartDeployment
     displayName: Start Deployment
@@ -27,7 +30,7 @@ jobs:
             $(projectId)
             $(umbracoCloudApiKey)
             $artifactId
-            $(TargetEnvironmentAlias)
+            ${{ parameters.targetEnvironmentAlias }}
             "Run for $(Build.BuildNumber)"
             $noBuildAndRestore
             $skipVersionCheck
