--- a/v2/powershell/azuredevops/cloud-sync.yml
+++ b/v2/powershell/azuredevops/cloud-sync.yml
@@ -1,3 +1,8 @@
+parameters:
+  - name: targetEnvironmentAlias
+    type: string
+    default: $(targetEnvironmentAlias)
+
 jobs:
   - job: cloudSync
     displayName: Check Cloud for changes
@@ -14,7 +19,7 @@ jobs:
           arguments: > 
             -ProjectId $(projectId)
             -ApiKey $(umbracoCloudApiKey)
-            -TargetEnvironmentAlias $(TargetEnvironmentAlias)
+            -TargetEnvironmentAlias ${{ parameters.targetEnvironmentAlias }}
             -PipelineVendor $(pipelineVendor)
 
     # Download git-patch file based on latest deployment
@@ -31,7 +36,7 @@ jobs:
             -ProjectId $(projectId)
             -ApiKey $(umbracoCloudApiKey)
             -DeploymentId $(latestDeploymentId)
-            -TargetEnvironmentAlias $(TargetEnvironmentAlias)
+            -TargetEnvironmentAlias ${{ parameters.targetEnvironmentAlias }}
             -DownloadFolder $(Pipeline.Workspace)/patch
             -PipelineVendor $(pipelineVendor)
 
