--- a/v2/bash/azuredevops/azure-release-pipeline-more-targets.yaml
+++ b/v2/bash/azuredevops/azure-release-pipeline-more-targets.yaml
@@ -22,34 +22,36 @@ trigger:
   batch: true
   branches:
     include:
-      - master
+      - main
       - flexible
 
 stages:
   # resolve which environment to deploy to based on triggering branch
   - stage: resolveTarget
+    displayName: Resolve Target Environment
     jobs:
       - job: setTargetEnvironment
         steps:
           - script: |
-              echo "current branch $(Build.SourceBranchName)"
-              if [ "$(Build.SourceBranchName)" = "master" ]; then
-                echo "target is: $(targetEnvironmentAlias)"
+              echo "Triggering branch: $(Build.SourceBranchName)"
+              if [ "$(Build.SourceBranchName)" = "main" ]; then
+                echo "Target is: $(targetEnvironmentAlias)"
                 echo "##vso[task.setvariable variable=targetEnvironment;isOutput=true]$(targetEnvironmentAlias)"
               elif [ "$(Build.SourceBranchName)" = "flexible" ]; then
-                echo "target is: $(flexibleTargetEnvironmentAlias)"
+                echo "Target is: $(flexibleTargetEnvironmentAlias)"
                 echo "##vso[task.setvariable variable=targetEnvironment;isOutput=true]$(flexibleTargetEnvironmentAlias)"
               else
                 echo "no target environment defined for branch: $(Build.SourceBranchName)"
+                exit 1
               fi
-            name: SetValue
+            name: setTargetEnvironmentValue
 
   # Get changes from cloud
   - stage: cloudSyncStage
     dependsOn: resolveTarget
     displayName: Umbraco Cloud Sync
     variables:
-      targetEnvironment: $[ stageDependencies.resolveTarget.setTargetEnvironment.outputs['SetValue.targetEnvironment'] ]
+      targetEnvironment: $[ stageDependencies.resolveTarget.setTargetEnvironment.outputs['setTargetEnvironmentValue.targetEnvironment'] ]
     jobs:
       - template: cloud-sync.yml
         parameters: 
@@ -77,7 +79,7 @@ stages:
     condition: in(dependencies.cloudPrepareArtifact.result, 'Succeeded')
     variables:
       artifactId: $[ stageDependencies.cloudPrepareArtifact.PrepareAndUploadArtifact.outputs['uploadArtifact.artifactId'] ]
-      targetEnvironment: $[ stageDependencies.resolveTarget.setTargetEnvironment.outputs['SetValue.targetEnvironment'] ]
+      targetEnvironment: $[ stageDependencies.resolveTarget.setTargetEnvironment.outputs['setTargetEnvironmentValue.targetEnvironment'] ]
     jobs:
       - template: cloud-deployment.yml
         parameters:
