--- a/V2/powershell/azuredevops/advanced/azure-release-pipeline-more-targets.yaml
+++ b/V2/powershell/azuredevops/advanced/azure-release-pipeline-more-targets.yaml
@@ -71,7 +71,7 @@ stages:
 
   # Deploy to Umbraco Cloud
   # ####
-  # you can edit the variables noBuildAndRestore and skipVersionCheck    
+  # you can edit the variables noBuildAndRestore, skipVersionCheck and allowAnyTarget
   # use booleans
   - stage: CloudDeploymentStage
     displayName: Deploy To Cloud
@@ -86,4 +86,5 @@ stages:
           artifactId: $(artifactId)
           noBuildAndRestore: false
           skipVersionCheck: false
+          allowAnyTarget: false
           targetEnvironmentAlias: $(targetEnvironment)
