--- a/V2/powershell/github/cloud-deployment.yml
+++ b/V2/powershell/github/cloud-deployment.yml
@@ -30,6 +30,11 @@ on:
         required: false
         type: number
         default: 0
+      allowAnyTarget:
+        description: 'Allows deployments to targets other than left-most or flexible'
+        required: false
+        type: number
+        default: 0
 
     secrets:
       projectId:
