--- a/V2/powershell/github/advanced/main-more-targets.yml
+++ b/V2/powershell/github/advanced/main-more-targets.yml
@@ -49,13 +49,15 @@ jobs:
     name: "Prepare and Upload Artifact"
     uses: ./.github/workflows/cloud-artifact.yml
     needs: cloud-sync
+    with:
+      newSha: ${{ needs.cloud-sync.outputs.newSha }}
     secrets:
       projectId: ${{ secrets.PROJECT_ID }}
       umbracoCloudApiKey: ${{ secrets.UMBRACO_CLOUD_API_KEY }}
 
   # Deploy to Umbraco Cloud
   # ####
-  # you can edit the variables noBuildAndRestore and skipVersionCheck    
+  # you can edit the variables noBuildAndRestore, skipVersionCheck and allowAnyTarget
   # use 0 for false and 1 for true
   cloud-deployment:
     name: "Deploy to Cloud"
@@ -66,6 +68,7 @@ jobs:
       targetEnvironmentAlias: ${{ needs.set-env.outputs.targetEnvironmentAlias }}
       noBuildAndRestore: 0
       skipVersionCheck: 0
+      allowAnyTarget: 0
     secrets:
       projectId: ${{ secrets.PROJECT_ID }}
       umbracoCloudApiKey: ${{ secrets.UMBRACO_CLOUD_API_KEY }}
