--- a/V2/bash/azuredevops/advanced/azure-release-pipeline-more-targets.yaml
+++ b/V2/bash/azuredevops/advanced/azure-release-pipeline-more-targets.yaml
@@ -86,4 +86,5 @@ stages:
           artifactId: $(artifactId)
           noBuildAndRestore: 'true'
           skipVersionCheck: 'true'
+          allowAnyTarget: 'false'
           targetEnvironmentAlias: $(targetEnvironment)
