--- a/V2/powershell/github/cloud-deployment.yml
+++ b/V2/powershell/github/cloud-deployment.yml
@@ -66,6 +66,7 @@ jobs:
           -CommitMessage "Run number ${{github.run_number}}" 
           -NoBuildAndRestore ${{ inputs.noBuildAndRestore }}
           -SkipVersionCheck ${{ inputs.skipVersionCheck }}
+          -AllowAnyTarget ${{ inputs.allowAnyTarget }}
           -PipelineVendor GITHUB
 
   awaitDeploymentFinished:
