--- a/V2/bash/azuredevops/azure-release-pipeline.yaml
+++ b/V2/bash/azuredevops/azure-release-pipeline.yaml
@@ -43,7 +43,8 @@ stages:
 
   # Deploy to Umbraco Cloud
   # ####
-  # you can edit the variables noBuildAndRestore, skipVersionCheck and allowAnyTarget
+  # you can edit the variables noBuildAndRestore, skipVersionCheck, skipPreserveUmbracoCloudJson, 
+  # allowAnyTarget and runSchemaExtraction
   # use booleans but as strings
   - stage: CloudDeploymentStage
     displayName: Deploy To Cloud
@@ -51,10 +52,12 @@ stages:
     condition: in(dependencies.cloudPrepareArtifact.result, 'Succeeded')
     variables:
       artifactId: $[ stageDependencies.cloudPrepareArtifact.PrepareAndUploadArtifact.outputs['uploadArtifact.artifactId'] ]
-    jobs: 
+    jobs:
       - template: cloud-deployment.yml
         parameters:
           artifactId: $(artifactId)
           noBuildAndRestore: 'false'
           skipVersionCheck: 'false'
+          skipPreserveUmbracoCloudJson: 'false'
           allowAnyTarget: 'false'
+          runSchemaExtraction: 'true'
