--- a/V2/bash/github/main.yml
+++ b/V2/bash/github/main.yml
@@ -31,7 +31,8 @@ jobs:
 
   # Deploy to Umbraco Cloud
   # ####
-  # you can edit the variables noBuildAndRestore, skipVersionCheck and allowAnyTarget
+  # you can edit the variables noBuildAndRestore, skipVersionCheck, skipPreserveUmbracoCloudJson, 
+  # allowAnyTarget and runSchemaExtraction
   # use booleans but as strings
   cloud-deployment:
     name: "Deploy to Cloud"
@@ -42,7 +43,9 @@ jobs:
       targetEnvironmentAlias: ${{ vars.TARGET_ENVIRONMENT_ALIAS }}
       noBuildAndRestore: "false"
       skipVersionCheck: "false"
+      skipPreserveUmbracoCloudJson: "false"
       allowAnyTarget: "false"
+      runSchemaExtraction: "true"
     secrets:
       projectId: ${{ secrets.PROJECT_ID }}
       umbracoCloudApiKey: ${{ secrets.UMBRACO_CLOUD_API_KEY }}
